crates/ai/tests/snapshots/tool_outputs_parity__output_list_categorization_context.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "examples": [],
    "summary": {
      "deterministicallyProposed": 0,
      "needsAiJudgement": 0,
      "total": 0
    },
    "taxonomies": [],
    "unproposed": []
  }
}
