crates/ai/tests/snapshots/tool_outputs_parity__output_list_categorization_context_explicit_ids.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "examples": [
      {
        "categoryId": "cat-coffee",
        "categoryPath": "Food / Coffee",
        "notes": "SQ *COFFEE SHOP OTTAWA"
      }
    ],
    "summary": {
      "deterministicallyProposed": 1,
      "needsAiJudgement": 0,
      "total": 1
    },
    "taxonomies": [
      {
        "categories": [
          {
            "categoryId": "cat-food",
            "color": "#64748b",
            "key": "food",
            "name": "Food",
            "path": "Food"
          },
          {
            "categoryId": "cat-coffee",
            "color": "#64748b",
            "key": "coffee",
            "name": "Coffee",
            "path": "Food / Coffee"
          }
        ],
        "taxonomyId": "spending",
        "taxonomyName": "Spending"
      }
    ],
    "unproposed": []
  }
}
